--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       For the three scripts below, if your spec resides on dev.w3 you can check them
       out in the same tree and use relative links so that they'll work offline,
      -->
-    <!--script src='//www.w3.org/Tools/respec/respec-w3c-common' class='remove'></script-->
-    <script src='//sites.local/respec/builds/respec-w3c-common.js' class='remove'></script>
+    <script src='//www.w3.org/Tools/respec/respec-w3c-common' class='remove'></script>
     <script type="text/javascript" class="remove">
       var respecConfig = {
         // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
