Add KimHD to list of editors.

--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
         // only "name" is required. Same format as editors.
 
         authors:  [
-            { name: "Dave Longley", url: "http://digitalbazaar.com/",
-              company: "Digital Bazaar, Inc.", companyURL: "http://digitalbazaar.com/" },
-            { name: "Manu Sporny", url: "http://digitalbazaar.com/",
-              company: "Digital Bazaar, Inc.", companyURL: "http://digitalbazaar.com/" }
+          { name: "Kim D. Hamilton", url: "",
+            company: "", companyURL: "" }
         ],
 
         // extend the bibliography entries
