Errata on example signature suite name

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ considerations.</div>
       <h2>Examples</h2>
 
       <p>
-A simple example of an RSA 2017 signature:
+A simple example of a Merkle Proof Signature Suite 2017 signature:
       </p>
 
       <pre class="example highlight">
