--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         // previousMaturity:  "WD",
 
         // if there a publicly available Editor's Draft, this is the link
-        edDraftURI:           "https://w3c-dvcg.github.io/lds-merkleproof2017/",
+        edDraftURI:           "https://w3c-ccg.github.io/lds-merkleproof2017/",
 
         // if this is a LCWD, uncomment and set the end of its review period
         // lcEnd: "2009-08-05",
@@ -66,14 +66,14 @@
         otherLinks: [{
           key: "Source control",
           data: [{
-            value: "https://github.com/w3c-dvcg/lds-merkleproof2017/",
-            href: "https://github.com/w3c-dvcg/lds-merkleproof2017/"
+            value: "https://github.com/w3c-ccg/lds-merkleproof2017/",
+            href: "https://github.com/w3c-ccg/lds-merkleproof2017/"
           }]
         }, {
           key: "Issue Tracker",
           data: [{
-            value: "https://github.com/w3c-dvcg/lds-merkleproof2017/issues/",
-            href: "https://github.com/w3c-dvcg/lds-merkleproof2017/issues/"
+            value: "https://github.com/w3c-ccg/lds-merkleproof2017/issues/",
+            href: "https://github.com/w3c-ccg/lds-merkleproof2017/issues/"
           }]
         }],
 
@@ -111,7 +111,7 @@
           },
           "LDS-KOBLITZ2016": {
             title:    "Koblitz Elliptic Curve Signature 2016",
-            href:     "https://w3c-dvcg.github.io/lds-koblitz2016/",
+            href:     "https://w3c-ccg.github.io/lds-koblitz2016/",
             authors:  ["Harlan Wood", "Manu Sporny"],
             status:   "CGDRAFT",
             publisher:  "Web Payments Community Group"
@@ -217,7 +217,7 @@ the following algorithms:
           </tr>
           <tr>
             <td>signatureAlgorithm</td>
-            <td>https://w3c-dvcg.github.io/lds-koblitz2016/</td>
+            <td>https://w3c-ccg.github.io/lds-koblitz2016/</td>
             <td>[[LDS-KOBLITZ2016]]</td>
           </tr>
         </tbody>
